--- a/style.css
+++ b/style.css
@@ -205,14 +205,14 @@ pre {
 }
 
 .projects {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px
 }
 
 .projects li {
-  width: 30%;
+  width: 100%;
   list-style-type: none;
 }
 
@@ -418,6 +418,10 @@ pre {
   .dev {
     padding-top: 20px;
   }
+
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media (max-width: 745px) {
@@ -455,6 +459,10 @@ pre {
 
   pre {
     padding: 10px 20px 0;
+  }
+
+  .projects {
+    grid-template-columns: repeat(1, 1fr);
   }
 
   .footer-container {
